# ScanSplitter

./: .gitignore  LICENSE  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ExifEditor.tsx  FileTabs.tsx  FileUpload.tsx  ImageCanvas.tsx  KeyboardShortcutsDialog.tsx  Lightbox.tsx  PageNavigator.tsx  ResultsGallery.tsx  SettingsPanel.tsx  Toast.tsx
frontend/src/components/ui/: button.tsx  card.tsx  slider.tsx
frontend/src/lib/: api.ts  shortcuts.ts  utils.ts
frontend/src/types/: index.ts
scripts/: release.sh
src/scansplitter/: api.py  cli.py  detector.py  exif_handler.py  models.py  processor.py  rotator.py  session.py
src/scansplitter/static/: index.html
src/scansplitter/static/assets/: index-1eYejvre.js  index-4SbHskux.css  index-BINxtgEe.js  index-BVghRkFR.css  index-BhwLFz6w.css  index-BtSEMqeo.css  index-CDGOG9EN.js  index-COvIflXK.js  index-CaepjrOk.js  index-DYVTdnpQ.css  index-D_n7LK_z.css  index-DwRJXxfJ.js
