[project]
name = "scansplitter"
version = "0.2.0"
description = "Automatically detect, split, and rotate multiple photos from scanned images"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
keywords = ["scanner", "photos", "split", "crop", "rotate", "opencv", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "numpy>=2.4.0",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "piexif>=1.1.3",
]

[project.urls]
Homepage = "https://github.com/janklan/scansplitter"
Repository = "https://github.com/janklan/scansplitter"
Issues = "https://github.com/janklan/scansplitter/issues"

[project.scripts]
scansplitter = "scansplitter.cli:main"

[tool.setuptools.package-data]
scansplitter = ["static/**/*"]

[tool.uv]
package = true

[tool.uv.sources]
